--- a/proj/App.config
+++ b/proj/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
@@ -11,6 +11,7 @@
     <add name="QLNV1.Properties.Settings.QLDSVHTCConnectionString"
       connectionString="Data Source=20.255.58.0,1431;Initial Catalog=QLDSVHTC;Persist Security Info=True;User ID=sa;Password=123"
       providerName="System.Data.SqlClient" />
+    <add name="QLDSVHTCConnectionString" connectionString="XpoProvider=MSSqlServer;data source=20.255.58.0,1431;user id=;password=;initial catalog=QLDSVHTC;Persist Security Info=true" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
