--- a/proj/QLNV1.csproj
+++ b/proj/QLNV1.csproj
@@ -85,6 +85,12 @@
     <Compile Include="FormChuyenLop.Designer.cs">
       <DependentUpon>FormChuyenLop.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormGV.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGV.Designer.cs">
+      <DependentUpon>FormGV.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDangKi.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -232,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormChuyenLop.resx">
       <DependentUpon>FormChuyenLop.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormGV.resx">
+      <DependentUpon>FormGV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDangKi.resx">
       <DependentUpon>frmDangKi.cs</DependentUpon>
